Update to python 13, update schemas and connection

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-alembic
+alembic>=1.13.1
 FastAPI[all]
-sqlalchemy
-python-dotenv
-fastapi-users[sqlalchemy]
-pydantic
-asyncpg
-python-multipart
-aiofiles
+sqlalchemy>=2.0.25
+python-dotenv>=1.0.0
+fastapi-users[sqlalchemy]>=12.1.2
+pydantic>=2.6.1
+asyncpg>=0.29.0
+python-multipart>=0.0.9
+aiofiles>=23.2.1
+uvicorn>=0.27.1
+
+
