--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ alembic>=1.13.1
 FastAPI[all]
 sqlalchemy>=2.0.25
 python-dotenv>=1.0.0
-fastapi-users[sqlalchemy]>=12.1.2
 pydantic>=2.6.1
 asyncpg>=0.29.0
 python-multipart>=0.0.9
 aiofiles>=23.2.1
 uvicorn>=0.27.1
+passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
+python-jose[cryptography]>=3.3.0
 
 
