--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ FastAPI[all]
 sqlalchemy>=2.0.25
 python-dotenv>=1.0.0
 pydantic>=2.6.1
+pydantic-settings>=2.0.0
 asyncpg>=0.29.0
 python-multipart>=0.0.9
 aiofiles>=23.2.1
@@ -15,3 +16,6 @@ python-jose[cryptography]>=3.3.0
 #tests dependency
 pytest>=7.0.0
 httpx>=0.23.0
+pytest-asyncio>=0.21.0
+multiprocess
+pytest-dotenv
