Взаимодействие с S3 - начало положено

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ uvicorn>=0.27.1
 passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
 python-jose[cryptography]>=3.3.0
+aiobotocore>=2.5.0
 
 #tests dependency
 pytest>=7.0.0
