--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
 python-jose[cryptography]>=3.3.0
 aiobotocore>=2.5.0
+types-aiobotocore[s3]>=2.7.0
+
 
 #tests dependency
 pytest>=7.0.0
