--- a/src/settings/.env.example
+++ b/src/settings/.env.example
@@ -15,4 +15,11 @@ S3_URL = s3 Url
 S3_ACCESS_KEY = acces key for s3
 S3_SECRET_KEY = s3 secret key
 
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
+
+MINIO_WEBHOOK_ENDPOINT={SERVER_HOST}:{SERVER_PORT}/webhooks/minio/avatar
+MINIO_WEBHOOK_TOKEN=super-secret-webhook-token
+
+
 MODE=PROD    (PROD\TEST\DEV) - for start envioroment (.env\.test.env\.prod.env)
