--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,5 @@
 events {}
+
 http {
   server {
     listen 9000;
@@ -6,16 +7,28 @@ http {
       proxy_pass http://minio:9000;
     }
   }
+
   server {
     listen 9001;
     location / {
       proxy_pass http://minio:9001;
     }
   }
+
   server {
     listen 1086;
+
     location / {
       proxy_pass http://app:1086;
+
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+      proxy_buffering off;
     }
   }
 }
