--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,9 @@ services:
     volumes:
       - ../minio-data:/data
 
+    networks:
+      - edustream 
+
 
   postgres:
     image: postgres:16
@@ -43,6 +46,9 @@ services:
       - "${DB_PORT:-5432}:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+
+    networks:
+      - edustream
 
 
   app:
@@ -66,6 +72,9 @@ services:
       - postgres
       - minio
 
+    networks:
+      - edustream
+
 
   proxy:
     image: nginx:latest
@@ -81,12 +90,21 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
 
+    networks:
+      - edustream
+
+
   cli:
     image: ubuntu:22.04
     container_name: dev-cli
     restart: unless-stopped
     command: sleep infinity
+    networks:
+      - edustream
 
 volumes:
   minio-data:
   postgres-data:
+
+networks:
+  edustream:
