добавлено новое местоположение для проксирования документации

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,5 +30,8 @@ http {
       proxy_set_header Connection "";
       proxy_buffering off;
     }
+     location /docs {
+        proxy_pass http://app:1086/docs;
+    }
   }
 }
