--- a/nginx.conf
+++ b/nginx.conf
@@ -19,32 +19,18 @@ http {
     listen 1086;
 
     location / {
-      proxy_pass http://app:1086;
+      try_files $uri $uri/ @app;
+    }
 
+    location @app {
+      proxy_pass http://app:1086;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
-
       proxy_http_version 1.1;
       proxy_set_header Connection "";
       proxy_buffering off;
     }
-     
-    location /docs {
-      proxy_pass http://app:1086/docs;
-    }
-    location /openapi.json {
-    proxy_pass http://app:1086/openapi.json;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_http_version 1.1;
-    proxy_set_header Connection "";
-    proxy_buffering off;
-    add_header Content-Type application/json;
-    }
-
   }
 }
