--- a/nginx.conf
+++ b/nginx.conf
@@ -18,19 +18,41 @@ http {
   server {
     listen 1086;
 
+    # Явная проксировка openapi.json с увеличенными буферами
+    location /openapi.json {
+      proxy_pass http://app:1086/openapi.json;
+
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      proxy_http_version 1.1;
+      proxy_buffering on;
+      proxy_buffers 16 64k;
+      proxy_buffer_size 128k;
+
+      add_header Content-Type application/json;
+    }
+
+    # Прокси всего остального
     location / {
       try_files $uri $uri/ @app;
     }
 
     location @app {
       proxy_pass http://app:1086;
+
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+
       proxy_http_version 1.1;
-      proxy_set_header Connection "";
-      proxy_buffering off;
+      # УБРАНО: proxy_set_header Connection "";
+      proxy_buffering on;
+      proxy_buffers 16 64k;
+      proxy_buffer_size 128k;
     }
   }
 }
