--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,113 @@
 events {}
 
 http {
+  # Основной сервер, доступный извне на 80 порту
+  server {
+    listen 80;
+    server_name localhost;
+    client_max_body_size 50M; # Увеличиваем максимальный размер тела запроса
+    
+    # Проксирование /minio/ на сервис minio
+    location /minio/ {
+      proxy_pass http://minio:9000/;
+      
+      # Важные заголовки для корректной работы S3 API
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      
+      # Для правильной работы с большими файлами и PUT запросами
+      proxy_http_version 1.1;
+      proxy_buffering off;
+      proxy_request_buffering off;
+    }
+    
+    # Проксирование /minio/console/ для интерфейса MinIO
+    location /minio/console/ {
+      proxy_pass http://minio:9001/;
+      
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+    }
+    
+    # Явная обработка для openapi.json
+    location = /api/openapi.json {
+      proxy_pass http://app:1086/openapi.json;
+      
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      
+      proxy_http_version 1.1;
+      proxy_buffering on;
+      proxy_buffers 16 64k;
+      proxy_buffer_size 128k;
+      
+      add_header Content-Type application/json;
+    }
+    
+    # Явная обработка для Swagger UI
+    location = /api/docs {
+      proxy_pass http://app:1086/docs;
+      
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      
+      proxy_http_version 1.1;
+      proxy_buffering on;
+      proxy_buffers 16 64k;
+      proxy_buffer_size 128k;
+    }
+    
+    # Проксирование всех запросов по пути /api/ на сервис FastAPI
+    location /api/ {
+      # Не используем rewrite, просто убираем префикс api
+      proxy_pass http://app:1086/;
+      
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Forwarded-Prefix /api;
+      
+      proxy_http_version 1.1;
+      proxy_buffering on;
+      proxy_buffers 16 64k;
+      proxy_buffer_size 128k;
+    }
+    
+    # Редирект с корня на API документацию для удобства
+    location = / {
+      return 301 /api/docs;
+    }
+  }
+
+  # Существующие маршруты (оставляем для совместимости)
   server {
     listen 9000;
     location / {
       proxy_pass http://minio:9000;
+      
+      # Улучшаем настройки прокси
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      
+      # Для правильной работы с большими файлами и PUT запросами
+      proxy_http_version 1.1;
+      proxy_buffering off;
+      proxy_request_buffering off;
     }
   }
 
@@ -12,35 +115,24 @@ http {
     listen 9001;
     location / {
       proxy_pass http://minio:9001;
+      
+      # Улучшаем настройки прокси
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
     }
   }
 
   server {
     listen 1086;
 
-    # Явная проксировка openapi.json с увеличенными буферами
-    location /openapi.json {
-      proxy_pass http://app:1086/openapi.json;
-
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-
-      proxy_http_version 1.1;
-      proxy_buffering on;
-      proxy_buffers 16 64k;
-      proxy_buffer_size 128k;
-
-      add_header Content-Type application/json;
-    }
-
     # Прокси всего остального
     location / {
-      try_files $uri $uri/ @app;
-    }
-
-    location @app {
       proxy_pass http://app:1086;
 
       proxy_set_header Host $host;
@@ -49,7 +141,6 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
 
       proxy_http_version 1.1;
-      # УБРАНО: proxy_set_header Connection "";
       proxy_buffering on;
       proxy_buffers 16 64k;
       proxy_buffer_size 128k;
