--- a/nginx.conf
+++ b/nginx.conf
@@ -1,24 +1,52 @@
 events {}
 
 http {
-  # Основной сервер, доступный извне на 80 порту
+  # Общие настройки для всех серверов
+  client_max_body_size 100M;
+  proxy_http_version 1.1;
+  
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+  }
+
+  # Основной сервер на порту 80
   server {
     listen 80;
     server_name localhost;
-    client_max_body_size 50M; # Увеличиваем максимальный размер тела запроса
+    
+    # Новый location для проксирования на minio с прозрачной передачей запроса
+    location /s3proxy/ {
+      # Направляем запросы без изменения пути (важно сохранить слеш в конце)
+      proxy_pass http://minio:9000/;
+      
+      # ВАЖНО: устанавливаем Host как minio:9000 для корректной проверки сигнатуры
+      proxy_set_header Host minio:9000;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      
+      # Отключаем буферизацию для стриминга больших файлов
+      proxy_buffering off;
+      proxy_request_buffering off;
+      
+      # Увеличиваем таймауты для больших файлов
+      proxy_connect_timeout 300;
+      proxy_send_timeout 300;
+      proxy_read_timeout 300;
+    }
     
     # Проксирование /minio/ на сервис minio
     location /minio/ {
       proxy_pass http://minio:9000/;
       
-      # Важные заголовки для корректной работы S3 API
+      # Заголовки для S3 API
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       
-      # Для правильной работы с большими файлами и PUT запросами
-      proxy_http_version 1.1;
+      # Настройки для работы с большими файлами
       proxy_buffering off;
       proxy_request_buffering off;
     }
@@ -32,12 +60,12 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       
-      proxy_http_version 1.1;
+      # Websocket поддержка для консоли
       proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
+      proxy_set_header Connection $connection_upgrade;
     }
     
-    # Явная обработка для openapi.json
+    # API документация и специальные пути
     location = /api/openapi.json {
       proxy_pass http://app:1086/openapi.json;
       
@@ -46,7 +74,7 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       
-      proxy_http_version 1.1;
+      # Буферизация для JSON-ответов
       proxy_buffering on;
       proxy_buffers 16 64k;
       proxy_buffer_size 128k;
@@ -54,7 +82,6 @@ http {
       add_header Content-Type application/json;
     }
     
-    # Явная обработка для Swagger UI
     location = /api/docs {
       proxy_pass http://app:1086/docs;
       
@@ -63,15 +90,15 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       
-      proxy_http_version 1.1;
+      # Буферизация для HTML-ответов
       proxy_buffering on;
       proxy_buffers 16 64k;
       proxy_buffer_size 128k;
     }
     
-    # Проксирование всех запросов по пути /api/ на сервис FastAPI
+    # Проксирование API
     location /api/ {
-      # Не используем rewrite, просто убираем префикс api
+      # Проксируем на FastAPI (без префикса)
       proxy_pass http://app:1086/;
       
       proxy_set_header Host $host;
@@ -80,58 +107,69 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-Forwarded-Prefix /api;
       
-      proxy_http_version 1.1;
+      # Буферизация для API
       proxy_buffering on;
       proxy_buffers 16 64k;
       proxy_buffer_size 128k;
     }
     
-    # Редирект с корня на API документацию для удобства
+    # Редирект с корня на API документацию
     location = / {
       return 301 /api/docs;
     }
   }
 
-  # Существующие маршруты (оставляем для совместимости)
+  # Сервер для MinIO S3 API на порту 9000 - Прозрачное проксирование
   server {
     listen 9000;
+    server_name localhost;
+    
     location / {
       proxy_pass http://minio:9000;
       
-      # Улучшаем настройки прокси
-      proxy_set_header Host $host;
+      # ВАЖНО: сохраняем оригинальный хост, чтобы подпись совпадала
+      proxy_set_header Host minio:9000;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       
-      # Для правильной работы с большими файлами и PUT запросами
-      proxy_http_version 1.1;
+      # Отключаем буферизацию для стриминга файлов
       proxy_buffering off;
       proxy_request_buffering off;
     }
   }
 
+  # Сервер для MinIO Console на порту 9001
   server {
     listen 9001;
+    server_name localhost;
+    
     location / {
       proxy_pass http://minio:9001;
       
-      # Улучшаем настройки прокси
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       
-      proxy_http_version 1.1;
+      # Websocket поддержка
       proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
+      proxy_set_header Connection $connection_upgrade;
+      
+      # Повышаем таймауты
+      proxy_connect_timeout 300;
+      proxy_send_timeout 300;
+      proxy_read_timeout 300;
+      
+      # Отключаем буферизацию
+      proxy_buffering off;
     }
   }
 
+  # Прямой доступ к FastAPI на порту 1086 (для разработки)
   server {
     listen 1086;
 
-    # Прокси всего остального
     location / {
       proxy_pass http://app:1086;
 
@@ -140,7 +178,7 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
 
-      proxy_http_version 1.1;
+      # Буферизация для API
       proxy_buffering on;
       proxy_buffers 16 64k;
       proxy_buffer_size 128k;
