--- a/nginx.conf
+++ b/nginx.conf
@@ -1,187 +1,84 @@
+# /etc/nginx/nginx.conf
+# ─────────────────────
 events {}
 
 http {
-  # Общие настройки для всех серверов
-  client_max_body_size 100M;
-  proxy_http_version 1.1;
-  
-  map $http_upgrade $connection_upgrade {
-    default upgrade;
-    '' close;
-  }
+    # ────────── upstream'ы ──────────
+    upstream backend {
+        server app:1086;          # FastAPI-контейнер
+    }
 
-  # Основной сервер на порту 80
-  server {
-    listen 80;
-    server_name localhost;
-    
-    # Новый location для проксирования на minio с прозрачной передачей запроса
-    location /s3proxy/ {
-      # Направляем запросы без изменения пути (важно сохранить слеш в конце)
-      proxy_pass http://minio:9000/;
-      
-      # ВАЖНО: устанавливаем Host как minio:9000 для корректной проверки сигнатуры
-      proxy_set_header Host minio:9000;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      
-      # Отключаем буферизацию для стриминга больших файлов
-      proxy_buffering off;
-      proxy_request_buffering off;
-      
-      # Увеличиваем таймауты для больших файлов
-      proxy_connect_timeout 300;
-      proxy_send_timeout 300;
-      proxy_read_timeout 300;
+    upstream frontend {
+        server frontend:80;       # Vite-React-контейнер
     }
-    
-    # Проксирование /minio/ на сервис minio
-    location /minio/ {
-      proxy_pass http://minio:9000/;
-      
-      # Заголовки для S3 API
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      
-      # Настройки для работы с большими файлами
-      proxy_buffering off;
-      proxy_request_buffering off;
-    }
-    
-    # Проксирование /minio/console/ для интерфейса MinIO
-    location /minio/console/ {
-      proxy_pass http://minio:9001/;
-      
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      
-      # Websocket поддержка для консоли
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection $connection_upgrade;
-    }
-    
-    # API документация и специальные пути
-    location = /api/openapi.json {
-      proxy_pass http://app:1086/openapi.json;
-      
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      
-      # Буферизация для JSON-ответов
-      proxy_buffering on;
-      proxy_buffers 16 64k;
-      proxy_buffer_size 128k;
-      
-      add_header Content-Type application/json;
-    }
-    
-    location = /api/docs {
-      proxy_pass http://app:1086/docs;
-      
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      
-      # Буферизация для HTML-ответов
-      proxy_buffering on;
-      proxy_buffers 16 64k;
-      proxy_buffer_size 128k;
-    }
-    
-    # Проксирование API
-    location /api/ {
-      # Проксируем на FastAPI (без префикса)
-      proxy_pass http://app:1086/;
-      
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header X-Forwarded-Prefix /api;
-      
-      # Буферизация для API
-      proxy_buffering on;
-      proxy_buffers 16 64k;
-      proxy_buffer_size 128k;
-    }
-    
-    # Редирект с корня на API документацию
-    location = / {
-      return 301 /api/docs;
-    }
-  }
 
-  # Сервер для MinIO S3 API на порту 9000 - Прозрачное проксирование
-  server {
-    listen 9000;
-    server_name localhost;
-    
-    location / {
-      proxy_pass http://minio:9000;
-      
-      # ВАЖНО: сохраняем оригинальный хост, чтобы подпись совпадала
-      proxy_set_header Host minio:9000;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      
-      # Отключаем буферизацию для стриминга файлов
-      proxy_buffering off;
-      proxy_request_buffering off;
+    upstream minio_api {
+        server minio:9000;        # S3-API
     }
-  }
 
-  # Сервер для MinIO Console на порту 9001
-  server {
-    listen 9001;
-    server_name localhost;
-    
-    location / {
-      proxy_pass http://minio:9001;
-      
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      
-      # Websocket поддержка
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection $connection_upgrade;
-      
-      # Повышаем таймауты
-      proxy_connect_timeout 300;
-      proxy_send_timeout 300;
-      proxy_read_timeout 300;
-      
-      # Отключаем буферизацию
-      proxy_buffering off;
+    upstream minio_console {
+        server minio:9001;        # Web-UI
     }
-  }
 
-  # Прямой доступ к FastAPI на порту 1086 (для разработки)
-  server {
-    listen 1086;
+    # ────────── единый фронтовой сервер (порт 80) ──────────
+    server {
+        listen 80;
+        server_name _;            # при желании укажи домен
 
-    location / {
-      proxy_pass http://app:1086;
+        # ---------- SPA React ----------
+        location / {
+            proxy_pass http://frontend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+        # ---------- REST API FastAPI ----------
+        location /api/ {
+            proxy_pass http://backend/;      # слэш важен!
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_buffering off;
+        }
 
-      # Буферизация для API
-      proxy_buffering on;
-      proxy_buffers 16 64k;
-      proxy_buffer_size 128k;
+        # ----- прямые ссылки на Swagger / Redoc -----
+        location /api/docs/        { proxy_pass http://backend/docs/;  }
+        location /api/redoc/       { proxy_pass http://backend/redoc/; }
+        location /api/openapi.json {
+            proxy_pass http://backend/openapi.json;
+            add_header Content-Type application/json;
+        }
+
+        # ---------- MinIO через путь ----------
+        location /minio/ {
+            proxy_pass http://minio_console/;
+            proxy_set_header Host $host;
+        }
+
+        # (опционально) прямой S3-эндпоинт
+        location /s3/ {
+            proxy_pass http://minio_api/;
+            proxy_set_header Host $host;
+        }
     }
-  }
+
+    # ────────── отдельные порты для MinIO (оставляем, если нужны) ──────────
+    server {
+        listen 9000;
+        location / {
+            proxy_pass http://minio_api;
+        }
+    }
+
+    server {
+        listen 9001;
+        location / {
+            proxy_pass http://minio_console;
+        }
+    }
 }
