--- a/nginx.conf
+++ b/nginx.conf
@@ -1,84 +1,144 @@
 # /etc/nginx/nginx.conf
-# ─────────────────────
 events {}
 
 http {
-    # ────────── upstream'ы ──────────
-    upstream backend {
-        server app:1086;          # FastAPI-контейнер
-    }
+    # ───── upstream’ы ─────
+    upstream backend   { server app:1086; }      # FastAPI
+    upstream frontend  { server frontend:80; }   # React-SPA
+    upstream minio_api { server minio:9000; }
+    upstream minio_console { server minio:9001; }
 
-    upstream frontend {
-        server frontend:80;       # Vite-React-контейнер
-    }
-
-    upstream minio_api {
-        server minio:9000;        # S3-API
-    }
-
-    upstream minio_console {
-        server minio:9001;        # Web-UI
-    }
-
-    # ────────── единый фронтовой сервер (порт 80) ──────────
+    # ───── главный сервер :80 ─────
     server {
         listen 80;
-        server_name _;            # при желании укажи домен
+        server_name _;
 
-        # ---------- SPA React ----------
+        # ---------- React SPA ----------
+        # сначала пробуем отдать файл; иначе — index.html из фронтенда
         location / {
+            try_files $uri $uri/ @frontend;
+        }
+        location @frontend {
             proxy_pass http://frontend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # ---------- REST API FastAPI ----------
-        location /api/ {
-            proxy_pass http://backend/;      # слэш важен!
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # ---------- MinIO (как было) ----------
+        location /s3proxy/ {
+            proxy_pass http://minio_api/;
+            proxy_set_header Host              minio:9000;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
             proxy_buffering off;
+            proxy_request_buffering off;
+            proxy_connect_timeout 300;
+            proxy_send_timeout    300;
+            proxy_read_timeout    300;
         }
 
-        # ----- прямые ссылки на Swagger / Redoc -----
-        location /api/docs/        { proxy_pass http://backend/docs/;  }
-        location /api/redoc/       { proxy_pass http://backend/redoc/; }
-        location /api/openapi.json {
+        location /minio/console/ {
+            proxy_pass http://minio_console/;
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Upgrade           $http_upgrade;
+            proxy_set_header Connection        "upgrade";
+        }
+
+        location /minio/ {
+            proxy_pass http://minio_api/;
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off;
+            proxy_request_buffering off;
+        }
+
+        # ---------- FastAPI: спец-пути ----------
+        location = /api/openapi.json {
             proxy_pass http://backend/openapi.json;
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             add_header Content-Type application/json;
         }
 
-        # ---------- MinIO через путь ----------
-        location /minio/ {
-            proxy_pass http://minio_console/;
-            proxy_set_header Host $host;
+        location = /api/docs {
+            proxy_pass http://backend/docs;
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # (опционально) прямой S3-эндпоинт
-        location /s3/ {
-            proxy_pass http://minio_api/;
-            proxy_set_header Host $host;
+        location = /api/redoc {
+            proxy_pass http://backend/redoc;
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # ---------- FastAPI: все остальные /api/* ----------
+        location /api/ {
+            proxy_pass http://backend/;          # «/» сохраняет путь без /api-префикса
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Prefix /api;
         }
     }
 
-    # ────────── отдельные порты для MinIO (оставляем, если нужны) ──────────
+    # ───── отдельные порты для MinIO ─────
     server {
         listen 9000;
+        server_name _;
         location / {
             proxy_pass http://minio_api;
+            proxy_set_header Host minio:9000;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off;
+            proxy_request_buffering off;
         }
     }
 
     server {
         listen 9001;
+        server_name _;
         location / {
             proxy_pass http://minio_console;
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Upgrade           $http_upgrade;
+            proxy_set_header Connection        "upgrade";
+            proxy_connect_timeout 300;
+            proxy_send_timeout    300;
+            proxy_read_timeout    300;
+            proxy_buffering off;
+        }
+    }
+
+    # ───── прямой доступ к FastAPI на 1086 (опционально) ─────
+    server {
+        listen 1086;
+        location / {
+            proxy_pass http://backend;
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
