--- a/nginx.conf
+++ b/nginx.conf
@@ -1,143 +1,96 @@
-# /etc/nginx/nginx.conf
 events {}
 
 http {
-    # ───── upstream’ы ─────
-    upstream backend   { server app:1086; }      # FastAPI
-    upstream frontend  { server frontend:80; }   # React-SPA
+    # ---------- upstream ---------- #
+    upstream backend   { server app:1086; }
+    upstream frontend  { server frontend:80; }
     upstream minio_api { server minio:9000; }
-    upstream minio_console { server minio:9001; }
+    upstream minio_ui  { server minio:9001; }
 
-    # ───── главный сервер :80 ─────
+    # ---------- server :80 ---------- #
     server {
         listen 80;
         server_name _;
 
-        # ---------- React SPA ----------
-        # сначала пробуем отдать файл; иначе — index.html из фронтенда
+        # --- SPA (React) --- #
         location / {
             try_files $uri $uri/ @frontend;
         }
         location @frontend {
             proxy_pass http://frontend;
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # ---------- MinIO (как было) ----------
+        # --- FastAPI под /api --- #
+        location /api/ {
+            proxy_pass http://backend;          # ← без “/” : префикс /api сохраняется
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # --- MinIO API --- #
         location /s3proxy/ {
             proxy_pass http://minio_api/;
-            proxy_set_header Host              minio:9000;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header Host minio:9000;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering off;
             proxy_request_buffering off;
-            proxy_connect_timeout 300;
-            proxy_send_timeout    300;
-            proxy_read_timeout    300;
         }
 
+        # --- MinIO Console --- #
         location /minio/console/ {
-            proxy_pass http://minio_console/;
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_pass http://minio_ui/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Upgrade           $http_upgrade;
-            proxy_set_header Connection        "upgrade";
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
-
         location /minio/ {
             proxy_pass http://minio_api/;
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering off;
             proxy_request_buffering off;
-        }
-
-        # ---------- FastAPI: спец-пути ----------
-        location = /api/openapi.json {
-            proxy_pass http://backend/openapi.json;
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            add_header Content-Type application/json;
-        }
-
-        location = /api/docs {
-            proxy_pass http://backend/docs;
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location = /api/redoc {
-            proxy_pass http://backend/redoc;
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # ---------- FastAPI: все остальные /api/* ----------
-        location /api/ {
-            proxy_pass http://backend/;          # «/» сохраняет путь без /api-префикса
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Prefix /api;
         }
     }
 
-    # ───── отдельные порты для MinIO ─────
+    # ---------- MinIO прямые порты ---------- #
     server {
         listen 9000;
-        server_name _;
         location / {
             proxy_pass http://minio_api;
             proxy_set_header Host minio:9000;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_buffering off;
-            proxy_request_buffering off;
         }
     }
-
     server {
         listen 9001;
-        server_name _;
         location / {
-            proxy_pass http://minio_console;
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Upgrade           $http_upgrade;
-            proxy_set_header Connection        "upgrade";
-            proxy_connect_timeout 300;
-            proxy_send_timeout    300;
-            proxy_read_timeout    300;
-            proxy_buffering off;
+            proxy_pass http://minio_ui;
+            proxy_set_header Host $host;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
 
-    # ───── прямой доступ к FastAPI на 1086 (опционально) ─────
+    # ---------- прямой доступ к FastAPI на 1086 (dev) ---------- #
     server {
         listen 1086;
         location / {
             proxy_pass http://backend;
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
