--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,7 @@ http {
     server {
         listen 80;
         server_name _;
+        client_max_body_size 3G;
 
         # --- SPA (React) --- #
         location / {
