--- a/nginx.conf
+++ b/nginx.conf
@@ -43,6 +43,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering off;
             proxy_request_buffering off;
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
         }
 
         # --- MinIO Console --- #
